# app-django-quotes1

./: .dockerignore  .gitignore  Dockerfile  Dockerfile~  pyproject.toml  readme.md  readme.md~
hw_project/: .env_example  .gitignore  db.sqlite3
hw_project/hw_project/: asgi.py  settings.py  settings.py~  urls.py  wsgi.py
hw_project/quotes/: forms.py  models.py  urls.py  utils.py  views.py
hw_project/quotes/migrations/: 0001_initial.py  0002_alter_tag_name.py
hw_project/quotes/static/quotes/: style.css
hw_project/quotes/templates/quotes/: add_author.html  add_quote.html  add_tag.html  author_detail.html  base.html  index.html  index_1.html  tag_detail.html
hw_project/quotes/templatetags/: extract.py
hw_project/users/: models.py  views.py
hw_project/users/migrations/: 0001_initial.py
hw_project/users/templates/users/: login.html  profile.html
hw_project/utils/: add_quotes_to_db.py  migration.py
